[package]
name = "fendesk"
version = "0.1.0"
description = "An infinite-precision unit-aware calculator program based on fend and Tauri"
authors = ["Sekoia"]
license = "MIT"
repository = "https://github.com/SekoiaTree/fendesk"
default-run = "fendesk"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
rand = "0.8.5"
chrono = "0.4.23"
fend-core = "1.1.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["clipboard"] }
dialog = "0.3.0"
reqwest = "0.11.15" # Technically we could use tauri's api, but tauri's api is a pain.

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
